--- a/src/main/resources/templates/products/detail.html
+++ b/src/main/resources/templates/products/detail.html
@@ -31,7 +31,8 @@
         // }
         
         function addBasket(productId) {
-            var quantity = $("#quantity").val();
+            var stat = $('#quantity').text();
+            var quantity = parseInt(stat,10);
             var JSONObject= {
                 "productId" : productId,
                 "quantity" : quantity
@@ -48,7 +49,7 @@
                     console.log(data);
                 },
                 error : function (err) {
-                    alert('실패'+quantity);
+                    alert(quantity);
                     console.log(err.toString());
                 }
             });
@@ -72,7 +73,8 @@
         }
 
         function buyNow(productId) {
-            var quantity = parseInt($("#quantity").val());
+            var stat = $('#quantity').text();
+            var quantity = parseInt(stat,10);
 
             var form = document.createElement("form");
             form.setAttribute("method", "post");
