--- a/src/main/resources/templates/orders/list.html
+++ b/src/main/resources/templates/orders/list.html
@@ -8,6 +8,119 @@
     <br><br>
     <div style="text-align: center"><h2><strong>내 주문 내역</strong></h2></div>
     <hr style="padding-bottom: 40px">
-    <div class="container-fluid" style="width: 60%;">
+    <div class="container-fluid" th:if="${isGuestAccess} == true">
+        <div class="container login">
+            <div class="card-deck mb-3 text-center">
+                <div class="card mb-4 box-shadow">
+                    <div class="card-header">
+                        <h6 class="my-0 font-weight-normal">이미 등록된 고객입니다.</h6>
+                    </div>
+                    <div class="card-body">
+                        <form method="post" id="userForm" th:action="@{/users/login}" action="#">
+                            <div style="text-align: left; padding-bottom: 25px;">
+                                <label for="email"><small>이메일</small></label>
+                                <input type="text" class="form-control" id="email" name="email">
+                                <div class="formMsg">
+                                    <span></span>
+                                </div>
+                            </div>
+                            <div style="text-align: left; padding-bottom: 25px;">
+                                <label for="password"><small>비밀번호</small></label>
+                                <input type="password" class="form-control" id="password" name="password">
+                                <div class="formMsg">
+                                    <span></span>
+                                </div>
+                            </div>
+                            <div style="text-align: left; padding-bottom: 20px;">
+                                <input type="checkbox" aria-label="Checkbox for following text input">
+                                <span><small>내 정보 기억하기</small></span>
+                            </div>
+                            <button type="submit" class="btn btn-lg btn-block btn-light"><small>로그인</small></button>
+                            <p style="padding-top: 5px"><small>또는</small></p>
+                            <button type="button" class="btn btn-lg btn-block btn-primary" onclick="location.href='/sign-in/facebook'"><small>FACEBOOK 계정으로 로그인하기</small></button>
+                        </form>
+                    </div>
+                </div>
+                <div class="card mb-4 box-shadow">
+                    <div class="card-header">
+                        <h6 class="my-0 font-weight-normal">비회원으로 주문 하셨습니까?</h6>
+                    </div>
+                    <div style="padding-top: 25px"><small>주문번호 혹은 수령인과 휴대폰번호로 조회하실 수 있습니다.</small></div>
+                    <div class="card-body">
+                        <form th:action="@{/orders}" method="get" th:object="${orderSearch}">
+                            <div style="text-align: left; padding-bottom: 25px;">
+                                <label for="orderNo"><small>주문번호</small></label>
+                                <input type="text" class="form-control" id="orderNo" name="orderNo" th:field="*{orderNo}">
+                            </div>
+                            <p><small>또는</small></p>
+                            <table style="width: 100%;">
+                                <tr>
+                                    <td style="text-align: left; width: 35%"><label for="receiver"><small>수령인</small></label></td>
+                                    <td style="text-align: left;"><label for="phone1"><small>휴대폰번호</small></label></td>
+                                </tr>
+                                <tr>
+                                    <td style="width: 35%; padding-right: 20px"><input type="text" class="form-control" id="receiver" name="receiver" th:field="*{receiver}"></td>
+                                    <td>
+                                        <div class="form-row">
+                                            <div class="col">
+                                                <select class="custom-select mr-sm-2" id="phone1" th:field="*{phone1}">
+                                                    <option value="010">010</option>
+                                                    <option value="011">011</option>
+                                                    <option value="016">016</option>
+                                                </select>
+                                            </div>
+                                            <div class="col">
+                                                <input type="text" class="form-control" th:field="*{phone2}">
+                                            </div>
+                                            <div class="col">
+                                                <input type="text" class="form-control" th:field="*{phone3}">
+                                            </div>
+                                        </div>
+                                    </td>
+                                </tr>
+                            </table>
+                            <div style="padding-top: 50px">
+                                <button type="submit" class="btn btn-lg btn-block btn-light"><small>조회하기</small></button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid" style="width: 60%;" th:if="${isGuestAccess} == null">
+        <div style="padding-bottom: 90px">
+            <form method="get" th:action="@{/orders}">
+                <div class="form-group row">
+                    <label for="keyword" class="col-sm-2 col-form-label">검색어</label>
+                    <div class="col-sm-10">
+                        <input type="text" class="form-control" id="keyword" name="keyword" th:value="${productSearch.keyword}">
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label for="price" class="col-sm-2 col-form-label">판매가격대</label>
+                    <div class="col">
+                        <input type="text" class="form-control" id="price" name="minPrice" th:value="${productSearch.minPrice}">
+                    </div>
+                    <div class="col">
+                        <input type="text" class="form-control" id="price2" name="maxPrice" th:value="${productSearch.maxPrice}">
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label for="inputState" class="col-sm-2 col-form-label">검색정렬기준</label>
+                    <div class="col-sm-10">
+                        <div class="form-check">
+                            <select id="inputState" class="form-control" name="sort">
+                                <option value="favor">판매량순</option>
+                                <option value="recent">최신순</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+                <div class="text-center" style="padding-top: 20px;">
+                    <button type="submit" class="btn btn-dark">검색하기</button>
+                </div>
+            </form>
+        </div>
     </div>
 </th:block>
