--- a/src/main/resources/templates/main/index.html
+++ b/src/main/resources/templates/main/index.html
@@ -18,7 +18,8 @@
                     console.log(data);
                 },
                 error : function (err) {
-                    console.log(err.toString());
+                    alert.log("로그인해주세요")
+                    console.log(data);
                 }
             });
         }
