update: '바로구매' 로 주문시 OrderProduct 생성 안되는 버그 수정

--- a/src/main/resources/templates/fragments/common/common_include.html
+++ b/src/main/resources/templates/fragments/common/common_include.html
@@ -2,7 +2,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
 
 <link rel="stylesheet" th:href="@{/webjars/bootstrap/4.1.0/css/bootstrap.min.css}"/>
+<link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 <script th:src="@{/webjars/jquery/3.3.1-1/jquery.min.js}"></script>
 <script th:src="@{/webjars/bootstrap/4.1.0/js/bootstrap.min.js}"></script>
+<script src="//code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
 
 <th:block layout:fragment="html_head"></th:block>
