--- a/src/main/resources/templates/orders/basket.html
+++ b/src/main/resources/templates/orders/basket.html
@@ -3,6 +3,14 @@
 
 <th:block layout:fragment="html_head">
     <title>장바구니</title>
+    <style>
+        .underline {
+            border-left-width: 0;
+            border-right-width: 0;
+            border-top-width: 0;
+            border-bottom-width: 2px;
+        }
+    </style>
     <script>
         $(document).ready(function (){
 
@@ -141,7 +149,7 @@
                 </td>
                 <td style="vertical-align: middle" width="10%">
                     <div style="padding-bottom: 10px">
-                        <input type="text" th:attrappend="id='product_cno_'+${item.product.id}" style="text-align: center" size="3" th:value="${item.quantity}">
+                        <input class="underline" type="text" th:attrappend="id='product_cno_'+${item.product.id}" style="text-align: center" size="2" th:value="${item.quantity}">
                     </div>
                     <div>
                         <h5><a href="javascript:void(0);" class="badge badge-dark" role="button" aria-pressed="true"
