--- a/src/main/resources/templates/orders/list.html
+++ b/src/main/resources/templates/orders/list.html
@@ -7,7 +7,10 @@
         #searchDiv {
             border-radius: 20px;
             background: #f8f8f8;
-            padding: 30px;
+            padding-left: 40px;
+            padding-right: 30px;
+            padding-top: 30px;
+            padding-bottom: 30px;
         }
         .detail a:hover {
             cursor: pointer;
@@ -33,6 +36,7 @@
             border-top-width: 0;
             border-bottom-width: 2px;
             background-color:transparent;
+            text-align: center;
         }
     </style>
     <script>
@@ -55,6 +59,18 @@
 
         function showDetails(id){
             $("."+id).toggle();
+        }
+
+        function changeDateAndSubmit(range){
+            alert("d");
+            var dateTo = new Date();
+            var dateFrom = today;
+
+            dateFrom.setDate(dateFrom.getDate()-range);
+
+            $("#datepicker1").val(dateFrom.format("yyyy-MM-dd"));
+            $("#datepicker2").val(dateTo.format("yyyy-MM-dd"));
+            $("#searchForm").submit();
         }
     </script>
 </th:block>
@@ -144,8 +160,8 @@
     </div>
     <div class="container-fluid" style="width: 70%;" th:if="${isGuestAccess} == false">
         <div id="searchDiv">
-            <form method="get" th:action="@{/orders}" th:object="${orderSearch}">
-                <div><span><strong>검색 기간 설정</strong></span></div>
+            <form id="searchForm" method="get" th:action="@{/orders}" th:object="${orderSearch}">
+                <div style="text-align: center; padding-bottom: 30px;"><span><strong>검색 기간 설정</strong></span></div>
                 <div class="form-group row">
                     <div class="form-row">
                         <div class="col" style="margin: auto; padding-right: 20px">
@@ -160,13 +176,13 @@
                                 </select>
                             </div>
                         </div>
-                        <div class="col" style="margin: auto; padding-right: 15px">
+                        <div class="col" style="margin: auto; padding-right: 10px">
                             <div class="btn-group btn-group-sm" role="group">
-                                <button type="button" class="btn btn-secondary"><small>오늘</small></button>
-                                <button type="button" class="btn btn-secondary"><small>1주일</small></button>
-                                <button type="button" class="btn btn-secondary"><small>1개월</small></button>
-                                <button type="button" class="btn btn-secondary"><small>3개월</small></button>
-                                <button type="button" class="btn btn-secondary"><small>6개월</small></button>
+                                <button type="button" onclick="changeDateAndSubmit('0')" class="btn btn-secondary active"><small>오늘</small></button>
+                                <button type="button" onclick="changeDateAndSubmit('6')" class="btn btn-secondary active"><small>1주일</small></button>
+                                <button type="button" onclick="changeDateAndSubmit('29')" class="btn btn-secondary active"><small>1개월</small></button>
+                                <button type="button" onclick="changeDateAndSubmit('89')" class="btn btn-secondary active"><small>3개월</small></button>
+                                <button type="button" onclick="changeDateAndSubmit('179')" class="btn btn-secondary active"><small>6개월</small></button>
                             </div>
                         </div>
                         <div class="col" style="margin: auto;">
@@ -175,13 +191,19 @@
                         <div class="col">
                             <span>~</span>
                         </div>
-                        <div class="col" style="margin: auto;">
+                        <div class="col" style="margin: auto; padding-right: 10px">
                             <input type="text" id="datepicker2" class="underline" size="10" th:field="*{dateTo}" readonly>
                         </div>
                         <div class="col" style="margin: auto;">
-                            <button type="submit" class="btn btn-dark"><small>조회</small></button>
+                            <button type="submit" class="btn btn-dark btn-sm"><small>조회</small></button>
                         </div>
                     </div>
+                </div>
+                <div>
+                    <p>
+                        <br><span><small>- 기본적으로 최근 3개월간의 자료가 조회되며, 기간 검색시 지난 주문내역을 조회하실 수 있습니다.</small></span><br>
+                        <span><small>- 주문번호를 클릭하시면 해당 주문에 대한 상세내역을 확인하실 수 있습니다.</small></span>
+                    </p>
                 </div>
             </form>
         </div>
