--- a/src/main/resources/templates/products/list.html
+++ b/src/main/resources/templates/products/list.html
@@ -40,7 +40,7 @@
     <br><br>
     <div style="text-align: center"><h2><strong>Stickers</strong></h2></div>
     <hr style="padding-bottom: 40px">
-    <div class="container-fluid" style="width: 68%;">
+    <div class="container-fluid" style="width: 72%;">
         <div class="row justify-content-md-center">
             <div class="col">
                 <div class="row">
@@ -81,9 +81,9 @@
                                 <div class="card-body">
                                     <h6><span class="badge badge-pill badge-success">best</span>&nbsp;<span class="badge badge-pill badge-info">new</span></h6>
                                     <a th:href="@{'/products/' + ${product.id}}">
-                                        <h3 class="card-title"><strong th:text="${product.name}"></strong></h3>
+                                        <h3 class="card-title" style="font-family: Consolas, 돋움"><strong th:text="${product.name}"></strong></h3>
                                     </a>
-                                    <p class="card-text"><h4 th:text="${product.price}"></h4></p>
+                                    <p class="card-text"><h4 th:text="${#numbers.formatCurrency(product.price)}"></h4></p>
                                 </div>
                             </div>
                         </div>
